# rtype

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-main.yml
App/ECS/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.cpp  Coordinator.hpp  Entity.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  main.cpp
App/ECS/Components/: AI.hpp  Alive.hpp  Background.hpp  Bonus.hpp  Bound.hpp  Bullet.hpp  Button.hpp  Control.hpp  Drawable.hpp  Hitbox.hpp  MoveStat.hpp  Parallax.hpp  Particles.hpp  RLBackground.cpp  RLBackground.hpp  RLDrawable.cpp  RLDrawable.hpp  RLParticles.cpp  RLParticles.hpp  RLShader.cpp  RLShader.hpp  RLText.cpp  RLText.hpp  RigidBody.hpp  SDLBackground.cpp  SDLBackground.hpp  SDLDrawable.cpp  SDLDrawable.hpp  Scroll.hpp  Selector.hpp  ShaderedDrawable.hpp  Shoot.hpp  SoundEffect.hpp  Spawn.hpp  SpriteAnimation.cpp  SpriteAnimation.hpp  Temporary.hpp  Text.hpp  Transform.hpp  UI.hpp
App/ECS/Systems/: AISystem.cpp  AISystem.hpp  AnimateSystem.cpp  AnimateSystem.hpp  BoundSystem.cpp  BulletSystem.cpp  BulletSystem.hpp  ButtonSystem.cpp  CollisionSystem.cpp  ControlMoveSystem.cpp  ControlMoveSystem.hpp  DrawSystem.cpp  DrawSystem.hpp  DrawTextSystem.cpp  DrawTextSystem.hpp  LifeSystem.cpp  LifeSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ParallaxDrawSystem.cpp  ParallaxDrawSystem.hpp  ParallaxSystem.cpp  ParallaxSystem.hpp  ParticlesSystem.cpp  ParticlesSystem.hpp  ScrollSystem.cpp  ScrollSystem.hpp  SelectorSystem.cpp  SelectorSystem.hpp  ShaderSystem.cpp  ShaderSystem.hpp  ShootSystem.cpp  ShootSystem.hpp  SoundSystem.cpp  SoundSystem.hpp  SpawnSystem.cpp  SpawnSystem.hpp  TemporarySystem.cpp  TemporarySystem.hpp  UIRenderSystem.cpp  (+1 more)
App/GameEngine/: Boss.hpp  BossManager.hpp  Circle.hpp  Collision.cpp  Collision.hpp  CollisionMap.hpp  EngineButton.cpp  EngineButton.hpp  EntityFactory.cpp  EntityFactory.hpp  EntityFactoryMap.hpp  EventHandler.hpp  GameEntities.hpp  GridCell.cpp  GridCell.hpp  GridCollision.cpp  GridCollision.hpp  IBonus.hpp  IEntity.hpp  Initializor.cpp  LinkerEntities.hpp  MenuParallax.hpp  Player.cpp  Player.hpp  PollEvent.hpp  RLEventHandler.hpp  SDLEventHandler.hpp  Shader.hpp  Shape.hpp  SpaceParallax.hpp  Spawner.hpp  Square.hpp  UI.hpp
App/GameEngine/Managers/: FontManager.cpp  FontManager.hpp  GameManager.cpp  GameManager.hpp  LevelManager.hpp  PlayerManager.hpp  SettingsManager.hpp  ShaderManager.cpp  ShaderManager.hpp  SoundManager.cpp  SpriteManager.cpp  SpriteManager.hpp
App/GameEngine/Map/: Map.cpp  Map.hpp  Wall.hpp
App/GameEngine/RType/: LeaderBoard.hpp  Title.hpp
App/GameEngine/RType/AI/: AI.hpp
App/GameEngine/RType/Bonus/: BigShipBonus.hpp  RaygunBonus.hpp  ShieldBonus.hpp  SmallShipBonus.hpp
App/GameEngine/RType/Boss/: Beric.hpp  ContreUno.hpp  Feur.hpp
App/GameEngine/RType/Button/: BackButton.cpp  BackButton.hpp  BackToID1Button.cpp  BackToID1Button.hpp  CheatButton.cpp  CheatButton.hpp  HostButton.cpp  HostButton.hpp  JoinButton.cpp  JoinButton.hpp  MultiButton.cpp  MultiButton.hpp  PlayButton.cpp  PlayButton.hpp  QuitButton.cpp  QuitButton.hpp  RoomBackButton.cpp  RoomBackButton.hpp  RoomReadyButton.cpp  RoomReadyButton.hpp  SettingButton.cpp  SettingButton.hpp  SettingsBackButton.cpp  SettingsBackButton.hpp  SoloButton.cpp  SoloButton.hpp  SoundButton.cpp  SoundButton.hpp
App/GameEngine/RType/Enemy/: BrainAlienEnemy.hpp  CyborgBobEnemy.hpp  CyborgDamsEnemy.hpp  CyborgMegakongEnemy.hpp  Enemy.hpp  SpaceShipEnemy.hpp
App/GameEngine/RType/Particles/: Destruction.hpp  Propulsion.hpp  Shield.hpp
App/GameEngine/RType/Shader/: ColorShader.hpp  GalaxyShader.hpp  LightShader.hpp  RainShader.hpp  WaveShader.hpp
App/GameEngine/RType/Shoot/: BigShip.hpp  BigShipBullet.hpp  Movement.hpp  MultiBullet.hpp  MultiBullet2.hpp  Projectile.hpp  Raygun.hpp  RaygunEnemy.hpp  Shielder.hpp  SmallShip.hpp  SmallShipBullet.hpp  (+2 more)
App/GameEngine/Theme/: Theme.hpp
App/Lib/: IWindow.hpp  SDL.hpp
App/Utils/: Color.hpp  DataManager.hpp  PathBuilder.hpp  Random.hpp  Rect.hpp  Vector2.hpp
App/Utils/Errors/: Errors.hpp
Assets/Map/: level1.fill  level2.fill  level3.fill  level4.fill  level6.fill  level7.fill  level8.fill
Modules/: FindRaylib.cmake  FindSDL2.cmake
(+58 files in other folders)
